--- a/src/component/MainCard.css
+++ b/src/component/MainCard.css
@@ -15,6 +15,7 @@
   position: relative;
   overflow: hidden;
   background-color: var(--CardColor);
+  max-width: 350px;
 }
 
 .main_card:hover {
@@ -71,22 +72,21 @@
 }
 
 .current_day {
-  /* border: 2px solid blue; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
 }
-
+/* 
 .option_shape {
   width: 0;
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid var(--Lime-Green);
-}
+} */
 
 .current_followers {
-  color: var(--White-Text);
+  font-weight: bold;
 }
